# NeuralNetworksFromScratch

./: .gitignore  .gitmodules  ActivationFunction.cpp  ActivationFunction.h  ActivationFunctions.cpp  ActivationFunctions.h  Any.h  BFile.h  CMakeLists.txt  Except.cpp  Layer.cpp  Layer.h  LearningRate.cpp  LearningRate.h  LossFunctions.cpp  LossFunctions.h  MSE.cpp  MSE.h  MnistDataset.cpp  MnistDataset.h  Network.cpp  Network.h  README.md  declarations.h  main.cpp  utils.cpp  utils.h
Tests/inc/: TestLayer.h  TestLoss.h  TestMnist.h
Tests/src/: CMakeLists.txt  Except.cpp  TestActivationFunction.cpp  TestLayer.cpp  TestLoss.cpp  TestMnist.cpp  Tests.cpp  main.cpp
tests/: TestActivationFunction.cpp  TestActivationFunction.h  TestLoss.cpp  TestMnist.cpp  Tests.cpp  Tests.h
